<resources>
    <string name="app_name">myweather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="section_title_unit_temperature">Temperature Unit</string>
    <string name="save">Save</string>
    <string name="portuguese_pt_br">Portuguese pt-BR</string>
    <string name="english_en_us">English en-US</string>
    <string name="farenheit">Farenheit</string>
    <string name="celsius">Celsius</string>
    <string name="pref_file">prefFile</string>
    <string name="search">Search</string>
    <string name="city_name">Curitiba</string>
    <string name="city_temp">24</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_insert_name_city">Insert the name city to search</string>
    <string name="title_insert_favorite">Insert a city as favorite to see here</string>
</resources>